--- a/mfpj/local_project_ballreflection/index.html
+++ b/mfpj/local_project_ballreflection/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <script type = module" src="./vec2.js"></script>
+    <script type = "module" src="./vec2.js"></script>
     <main>
     </main>
     <script src="sketch.js"></script>
