fix index.html scripts src

--- a/mfpj/local_project_ballreflection/index.html
+++ b/mfpj/local_project_ballreflection/index.html
@@ -8,9 +8,9 @@
 
   </head>
   <body>
-    <script type = "module" src="./vec2.js"></script>
+    <script type = "module" src="file:///home/nokx/Documentos/programming/itznokx.github.io/mfpj/local_project_ballreflection/src/vec2.js"></script>
     <main>
     </main>
-    <script src="sketch.js"></script>
+    <script src="file:///home/nokx/Documentos/programming/itznokx.github.io/mfpj/local_project_ballreflection/sketch.js"></script>
   </body>
 </html>
